--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,61 @@
+*~
+.DS_Store
+
+# emacs
+# -*- mode: gitignore; -*-
+*~
 elpa-*/
 network-security.data
 recentf
 projectile-bookmarks.eld
+projectile.cache
+.persistent-scratch
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# idea
+.idea/
+
+# swaps
+*.~
